# log-analyzer-cli

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: report.json  report.md
log_analyzer/: __init__.py  cli.py  generator.py  parser.py  reports.py
log_analyzer/analyzers/: __init__.py  base.py  not_found.py  server_errors.py  status_codes.py  suspicious.py  top_ips.py  traffic_by_hour.py  user_agents.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_generator.py  test_parser.py  test_reports.py
